--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -93,6 +93,8 @@
     <script src="/js/custome.js" defer></script>
     <script type="module" defer>
 
+        import {getData} from "/js/api-function.js";
+
         const a = console.log;
 
 
@@ -185,9 +187,31 @@
                         seeMoreButton.href = "";
                         seeMoreButton.classList.add("btn", "btn-white", "text-secondary", "link-shadow");
                         seeMoreButton.setAttribute("dp-id", currentDp.id);
+                        a("Department Id : "+currentDp.id);
                         seeMoreButton.dataset.bsToggle = "modal";
                         seeMoreButton.dataset.bsTarget = "#department-details";
                         seeMoreButton.textContent = "See More";
+
+                        seeMoreButton.addEventListener("click", function (e) {
+
+                            getData(`/api/department/byId/${currentDp.id}`, (error, data) => {
+
+                                if(error) {
+                                    a(error)
+                                } else {
+                                    document.querySelector("#edit-department-name").value = data.name
+                                }
+
+                            })
+                            getData(`/api/user/count/departmentId = ${currentDp.id}`,(error, data) => {
+                                if(error){
+                                    a(error)
+                                } else{
+                                    document.querySelector("totalMember").value = data.count
+                                }
+                            })
+
+                        })
 
 // Append elements to construct the structure
                         outerDiv.appendChild(cardDiv);
@@ -215,7 +239,7 @@
 
 
 
-        a('fragment : ', fragment)
+
 
         fragment.childNodes.forEach(node => {
             console.log('fragment child',node);
@@ -226,6 +250,8 @@
             // Including the code that appends elements to the DOM
 
         });
+
+
 
     </script>
 </head>
@@ -298,6 +324,8 @@
                     <button type="button" class="btn-close text-white btn-close-white" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                 </div>
+
+
                 <div class="modal-body">
                     <!-- TODO :: SHOW DEPARTMENT'S DETAILS -->
                     <div class="container-fluid">
@@ -307,13 +335,8 @@
                                     <img src="https://source.unsplash.com/random/200x200?sig=1" alt="Profile"
                                          class="rounded-circle" style="height: 100px; width: 100px"/>
                                     <h4 style="margin-top: 10px">Department Head</h4>
-                                    <h5>Lai Kuan Lin</h5>
-                                    <div class="social-links mt-2">
-                                        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                                        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                                        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                                        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                                    </div>
+                                    <h5 id = "departmethead">Lai Kuan Lin</h5>
+
                                 </div>
                             </div>
                             <div class="pt-3">
@@ -336,11 +359,11 @@
                                         <div class="row row-cols-lg-1 row-cols-sm-1 row-cols-md-1 row-cols-xl-2">
                                             <ul class="list-group col" style="padding: 0;">
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                    Total Project<span class="badge bg-primary rounded-pill">14</span>
+                                                    Total Project<span class="badge bg-primary rounded-pill" id="totalProject"></span>
                                                 </li>
                                                 <br/>
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                    Total Member<span class="badge bg-primary rounded-pill">100</span>
+                                                    Total Member<span class="badge bg-primary rounded-pill" id="totalMember"></span>
                                                 </li>
                                             </ul>
                                             <div class="col">
@@ -354,10 +377,10 @@
                                     <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
                                         <form>
                                             <div>
-                                                <label>Department Name</label>
+                                                <label >Department Name</label>
                                                 <br/><br/>
                                                 <input type="text" class="form-control" name="departmentname"
-                                                       placeholder="Department Name"/>
+                                                       placeholder="Department Name" id="edit-department-name"/>
                                             </div>
                                             <br/>
                                             <div>
@@ -588,6 +611,44 @@
                 console.error("Error fetching data via Fetch:", error);
             });
     }
+    $('#departmenthead').change(function() {
+        var selectDepartmentHead = $("selectDepartmentHead");
+        var selectedDepartmentHead = "";
+
+
+
+
+    $.get('/api/user/list/DEPARTMENT_HEAD', function(data) {
+        selectDepartmentHead.empty();
+        $.each(data, function(index, department) {
+            selectDepartmentHead.append($('<option>', {
+                value: department.id, // Adjust this based on your data
+                text: department.name // Adjust this based on your data
+            }));
+        });
+    });
+    });
+
+
+
+    $(document).ready(function() {
+        $("#load-data").click(function() {
+            $.ajax({
+                url: "api/user/count", // URL to the API endpoint
+                type: "GET", // HTTP method (GET, POST, etc.)
+                dataType: "json", // Data type to expect in response
+                success: function(data) {
+
+                    console.log(data);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    // Handle errors
+                    console.log("Error: " + textStatus, errorThrown);
+                }
+            });
+        });
+    });
+
 
 
 </script>
